--- a/style.css
+++ b/style.css
@@ -877,7 +877,7 @@ a {
   flex: 1;
   flex-grow: 1;
   height: 330.64px;
-  margin-right: -19.46px;
+  left: -280px;
 }
 
 .element-home-page .frame-5 {
